white space fixed

--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,10 @@
-body {
+* {
     margin: 0;
     padding: 0;
 }
 
 #root {
     background-color: #f8f9fa;
-    margin: 0;
-    padding: 0;
     height: 100vh;
     width: 100vw;
 }
